# legaldoc-ai

./: .dockerignore  .env.example  .gitignore  .mcp-legaldoc.json  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.signoz.yml  docker-compose.yml  langgraph.json
.claude/: settings.json
api/: Dockerfile  main.py  pyproject.toml
api/core/: config.py  dependencies.py  mcp.py  telemetry.py
api/db/: seed.py
api/models/: document.py  reference.py
api/routes/v1/: router.py
api/routes/v1/endpoints/: assistant.py  documents.py  references.py
api/schemas/: assistant.py  common.py  document.py  reference.py
api/tests/: conftest.py  test_core.py  test_documents.py  test_endpoints_assistant.py  test_main.py  test_models.py  test_references.py  test_schemas.py  test_schemas_assistant.py  test_schemas_common.py  test_schemas_reference.py  test_seed.py  test_telemetry.py
docs/: confirm-draft-story.md  document-detail-layout.md  document-detail-loading-ui-design.html  document-detail-story.md  document-detail-ui-design.html  documents-empty-ui-design.html  documents-layout.md  documents-loading-ui-design.html  documents-page.feature  documents-story.md  documents-ui-design.html  generate-document-story.md  mcp-story.md  new-document-layout.md  new-document-story.md  new-document-ui-design.html  opentelemetry-story.md  product-design.md  query-documents-story.md  query-documents-ui-design.html  (+2 more)
langraph/: pyproject.toml
langraph/app/: graph.py  rag_graph.py  rag_state.py  state.py
langraph/models/: analyze_llm.py  answer_llm.py  draft_llm.py  extract_regulations_llm.py  filter_articles_llm.py  finalize_llm.py  llm_factory.py  parse_llm.py  rerank_llm.py  structure_llm.py
langraph/nodes/: analyze_node.py  answer_node.py  draft_node.py  finalize_node.py  ingest_node.py  rerank_node.py  retrieve_node.py  retrieve_sparql_node.py  retrieve_vector_node.py  structure_node.py
langraph/prompts/: analyze.txt  draft.txt  extract_regulations.txt  filter_articles.txt  finalize.txt  loader.py  parse_clauses.txt  rag_answer.txt  rerank.txt  structure.txt
langraph/services/: sparql_store.py  tracing.py  vector_store.py
langraph/tests/app/: test_graph.py  test_rag_graph.py  test_rag_state.py  test_state.py
langraph/tests/models/: test_analyze_llm.py  test_answer_llm.py  test_draft_llm.py  test_extract_regulations_llm.py  test_filter_articles_llm.py  test_finalize_llm.py  test_llm_factory.py  test_parse_llm.py  test_rerank_llm.py  test_structure_llm.py
langraph/tests/nodes/: test_analyze_node.py  test_answer_node.py  test_draft_node.py  test_finalize_node.py  test_ingest_node.py  test_rerank_node.py  test_retrieve_node.py  test_retrieve_sparql_node.py  test_retrieve_vector_node.py  test_structure_node.py
langraph/tests/prompts/: test_loader.py
langraph/tests/services/: test_sparql_store.py  test_tracing.py  test_vector_store.py
langraph/tests/utils/: test_json_parsing.py
langraph/utils/: json_parsing.py
(+131 files in other folders)
