[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legaldoc-ai-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor>=3.6,<3.7",
    "beanie>=1.26,<2",
    "pydantic",
    "pydantic-settings",
    "pypdf",
    "reportlab",
    "sse-starlette",
    "python-multipart",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-pymongo",
    "opentelemetry-instrumentation-logging",
    "clickhouse-connect",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mongomock-motor",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["api", "langraph"]

[tool.ruff.format]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["api"]
omit = [
  "*/__init__.py",
  "tests/*",
]

[tool.coverage.report]
show_missing = true
